cmake_minimum_required(VERSION 3.22)
project(VU_Meter VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ── Fetch JUCE ─────────────────────────────────────────────────────────────────
# Change GIT_TAG to a different release if needed (e.g. "8.0.4")
include(FetchContent)
FetchContent_Declare(
    JUCE
    GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
    GIT_TAG        7.0.9
)
FetchContent_MakeAvailable(JUCE)

# ── Plugin ─────────────────────────────────────────────────────────────────────
juce_add_plugin(VU_Meter
    COMPANY_NAME                "Florian"
    PLUGIN_MANUFACTURER_CODE    Flhd
    PLUGIN_CODE                 Vumr
    FORMATS                     VST3 Standalone
    PRODUCT_NAME                "VU Meter"
    IS_SYNTH                    FALSE
    NEEDS_MIDI_INPUT            FALSE
    NEEDS_MIDI_OUTPUT           FALSE
    IS_MIDI_EFFECT              FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    # Set TRUE + path below to auto-copy the built VST3 after each build
    COPY_PLUGIN_AFTER_BUILD     FALSE
    # VST3_COPY_DIR             "$ENV{PROGRAMFILES}/Common Files/VST3"
)

juce_generate_juce_header(VU_Meter)

target_sources(VU_Meter PRIVATE
    Source/PluginProcessor.cpp
    Source/PluginEditor.cpp
)

target_compile_definitions(VU_Meter PUBLIC
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_VST3_CAN_REPLACE_VST2=0
)

target_link_libraries(VU_Meter
    PRIVATE
        juce::juce_audio_utils
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_warning_flags
)
